[gd_scene load_steps=5 format=2]

[ext_resource path="res://content/weapons/artillery/FlakShell.gd" type="Script" id=1]
[ext_resource path="res://content/sounds/Weapons/artillery/Retro Weapon Gun LoFi 06.wav" type="AudioStream" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 25.0

[sub_resource type="CircleShape2D" id=3]
radius = 17.0294

[node name="FlakShell" type="Area2D"]
z_index = 100
collision_layer = 0
collision_mask = 128
script = ExtResource( 1 )

[node name="Sprite" type="Polygon2D" parent="."]
rotation = 1.5708
color = Color( 0.560784, 0.556863, 0.894118, 1 )
polygon = PoolVector2Array( -1.99999, 3.00001, -0.999986, 4, 1.00001, 4, 2.00001, 2.99999, 0.999993, -2, 0, -4, -1.00001, -2 )

[node name="Explosion" type="Polygon2D" parent="."]
color = Color( 0.886275, 0.12549, 0.12549, 0.756863 )
polygon = PoolVector2Array( -18, -17, -24, -3, -25, 7, -15, 19, 0, 25, 14, 21, 26, 8, 25, -12, 12, -23, -1, -25, -14, -21 )

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Impact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -6.0
bus = "Sounds"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_FlakShell_area_entered"]
[connection signal="area_entered" from="ExplosionArea" to="." method="_on_ExplosionArea_area_entered"]
[connection signal="area_exited" from="ExplosionArea" to="." method="_on_ExplosionArea_area_exited"]
[connection signal="finished" from="Impact" to="." method="_on_Impact_finished"]
